build css autowatch
layout of index page

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,3 +1,6 @@
-div
-    h2 login
+extends ../layout/index
+
+block contain
+    div
+        h2.text-center.text-2xl.font-extrabold Inicia Sesión
     
