--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,3 +1,7 @@
-html(data-theme="dark")
-    div
-        h2 Crear tu cuenta
+extends ../layout/index
+
+block contain
+    div.py-10
+        h1.text-4xl.my-10.font-extrabold.text-center Bienes
+            span.font-normal Raices
+        h2.text-center.text-2xl.font-extrabold= page
