--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -5,3 +5,22 @@ block contain
         h1.text-4xl.my-10.font-extrabold.text-center Bienes
             span.font-normal Raices
         h2.text-center.text-2xl.font-extrabold= page
+
+        div.mt-8.mx-auto.max-w-md
+            div.bg-white.py-8.px-4.shadow
+                form.space-y-5
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="name") Nombre
+                        input#name.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa tu nombre" type="text" name="name")
+
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email
+                        input#email.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Email de registro" type="email" name="email")
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="pwd") Password
+                        input#pwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa un password" type="password" name="pwd")
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rePwd") Repetir Password
+                        input#rePwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite el password" type="password" name="rePwd")
+                    
+                    Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Crear Cuenta")
