--- a/views/auth/recoveryPwd.pug
+++ b/views/auth/recoveryPwd.pug
@@ -13,4 +13,8 @@ block contain
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email
                         input#email.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Email de registro" type="email" name="email")
                     
+                    div.flex.items-center.justify-between
+                        a.text-gray-500.text-xs(href="/auth/login") Ya tengo cuenta.
+                        a.text-gray-500.text-xs(href="/auth/register") Crear nueva Cuenta.
+
                     Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Enviar Instrucciones") 
