--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -22,5 +22,9 @@ block contain
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rePwd") Repetir Password
                         input#rePwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite el password" type="password" name="rePwd")
+
+                    div.flex.items-center.justify-between
+                        a.text-gray-500.text-xs(href="/auth/login") Ya tengo cuenta.
+                        a.text-gray-500.text-xs(href="/auth/recovery-password") Olvide mi password.
                     
                     Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Crear Cuenta")
