refactor user model and update user controller
update reset password view

--- a/views/auth/resetPwd.pug
+++ b/views/auth/resetPwd.pug
@@ -19,5 +19,8 @@ block contain
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="pwd") Nuevo Password
                         input#pwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa tu nuevo password" type="password" name="pwd")
-                    
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rePwd") Repetir Password
+                        input#rePwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite el password" type="password" name="rePwd")
+
                     Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Cambiar Password") 
