--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,12 +2,12 @@ extends ../layout/index
 
 block contain
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
-            span.font-normal Raices
-        h2.text-center.text-2xl.font-extrabold= page
+        h1.text-5xl.my-10.font-extrabold.text-center.text-stone-700 Casa
+            span.font-normal Fácil
+        h2.text-center.text-2xl.font-extrabold.text-stone-700= page
 
         if (errors)
-            div.max-w-md.mx-auto.bg-red-400.mt-4.py-2.px-4
+            div.max-w-md.mx-auto.bg-rose-400.mt-4.py-2.px-4
                 ul.list-disc
                 each error in errors
                     li.text-white.uppercase.text-xs.p-1.font-bold.my-0= error.msg
@@ -28,4 +28,4 @@ block contain
                         a.text-gray-500.text-xs(href="/auth/register") No tengo cuenta.
                         a.text-gray-500.text-xs(href="/auth/recovery-password") Olvide mi password.
 
-                    Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Iniciar Sesión") 
+                    Input(class="w-full bg-stone-600 hover:bg-stone-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Iniciar Sesión") 
