--- a/views/auth/resetPwd.pug
+++ b/views/auth/resetPwd.pug
@@ -2,12 +2,12 @@ extends ../layout/index
 
 block contain
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
-            span.font-normal Raices
-        h2.text-center.text-2xl.font-extrabold= page
+        h1.text-5xl.my-10.font-extrabold.text-center.text-stone-700 Casa
+            span.font-normal Fácil
+        h2.text-center.text-2xl.font-extrabold.text-stone-700= page
 
         if (errors)
-            div.max-w-md.mx-auto.bg-red-400.mt-4.py-2.px-4
+            div.max-w-md.mx-auto.bg-rose-400.mt-4.py-2.px-4
                 ul.list-disc
                 each error in errors
                     li.text-white.uppercase.text-xs.p-1.font-bold.my-0= error.msg
@@ -23,4 +23,4 @@ block contain
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rePwd") Repetir Password
                         input#rePwd.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite el password" type="password" name="rePwd")
 
-                    Input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Cambiar Password") 
+                    Input(class="w-full bg-stone-600 hover:bg-stone-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Cambiar Password") 
