--- a/views/auth/verifyEmail.pug
+++ b/views/auth/verifyEmail.pug
@@ -2,9 +2,9 @@ extends ../layout/index
 
 block contain
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
-            span.font-normal Raices
-        h2.text-center.text-2xl.font-extrabold= page
+        h1.text-4xl.my-10.font-extrabold.text-center.text-stone-700 Casa
+            span.font-normal Fácil
+        h2.text-center.text-2xl.font-extrabold.text-stone-700= page
     div.bg-white.shadow.py-8.px-4.rounded-lg.max-w-md.mx-auto
         p(class= error? 'bg-red-500':'bg-green-500').py-2.px-5.rounded-lg.w-full.font-bold.text-center.text-white= message
 
