--- a/views/properties/admin.pug
+++ b/views/properties/admin.pug
@@ -2,8 +2,9 @@ extends ../layout/index
 
 block contain
     div.py-10
-        h1.text-4xl.my-10.font-extrabold.text-center Bienes
-            span.font-normal Raices
-        h2.text-center.text-2xl.font-extrabold= page
+        //- h1.text-4xl.my-10.font-extrabold.text-center Casa
+        //-     span.font-normal Fácil
+        h2.text-center.text-2xl.font-extrabold.text-stone-700= page
 
-        a(href="/properties/create" class="rounded py-2 px-10 my-5 bg-indigo-600 hover:bg-indigo-700 text-sm text-white text-center uppercase inline-block font-bold") Publicar Propiedad
+        a(href="/my-properties/create" class="rounded py-2 px-10 my-5 bg-stone-600 hover:bg-stone-700 text-sm text-white text-center uppercase inline-block font-bold") Publicar Propiedad
+        
