--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -1,5 +1,8 @@
 extends ../layout/index
 
+block styles 
+    link(rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="")
+
 block contain
     div.py-10
         //- h1.text-4xl.my-10.font-extrabold.text-center Casa
@@ -10,7 +13,7 @@ block contain
             form.space-y-8(action="") 
 
                 div.space-y-3
-                    h3.text-lg.leading-6.font-medium.text-gray-900 Informacion General
+                    h3.text-lg.leading-6.font-bold.text-gray-900 Informacion General
 
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="title") Titulo
@@ -20,26 +23,7 @@ block contain
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="description") Descripción
                         input#title.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa un titulo. ejm. Casa de playa" type="text" name="title")
 
-                    div(class="md:flex md:gap-4 space-y-4 md:space-y-0")
-
-                        div(class="md:w-1/3")
-                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="region") Departamento
-                            select#region.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="region")
-                                option(value="") - seleccione -
-
-                        div(class="md:w-1/3")
-                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="province") Provincia
-                            select#province.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="province")
-                                option(value="") - seleccione -
-
-                        div(class="md:w-1/3")
-                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="district") Distrito
-                            select#district.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="district")
-                                option(value="") - seleccione -
-
-                    div 
-                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="description") Direccioón
-                        input#title.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa un titulo. ejm. Casa de playa" type="text" name="title")
+                    
 
                     div
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="category") Categoria
@@ -52,9 +36,6 @@ block contain
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="rooms") Habitaciones
                             select#rooms.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="rooms")
                                 option(value="") - seleccione -
-                                //- - var n = 1;
-                                //-     while n < 10
-                                //-         option(value=n) #{n++}
 
                         div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="parking") Estacionamiento
@@ -77,17 +58,46 @@ block contain
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="pets") Mascotas
                             select#pets.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="pets")
                                 option(value="") - seleccione -
-                                //- - var n = 1;
-                                //-     while n < 10
-                                //-         option(value=n) #{n++}
 
                         div(class="md:w-1/3")
                             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="furnished") Amueblado
                             select#furnished.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="furnished")
                                 option(value="") - seleccione -
+                    
+                    h3.text-lg.leading-6.font-bold.text-gray-900.pt-8 Ubicación
+
+                    div(class="md:flex md:gap-4 space-y-4 md:space-y-0")
+
+                        div(class="md:w-1/3")
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="region") Departamento
+                            select#region.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="region")
+                                option(value="") - seleccione -
+
+                        div(class="md:w-1/3")
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="province") Provincia
+                            select#province.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="province")
+                                option(value="") - seleccione -
+
+                        div(class="md:w-1/3")
+                            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="district") Distrito
+                            select#district.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="district")
+                                option(value="") - seleccione -
+
+                    div 
+                        label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="description") Direccioón
+                        input#title.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Ingresa un titulo. ejm. Casa de playa" type="text" name="title")
+
+                    div#map.h-96
+                    input(type="hidden" name="lat" id="lat")
+                    input(type="hidden" name="lng" id="lng")
 
                     div 
                         label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="price") Precio Mensual
                         input#price.w-full.px.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="alquiler mensual en soles" type="number" name="price"  min="0")   
 
+
                 Input(class="w-full bg-stone-600 hover:bg-stone-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Publicar")         
+
+block scripts
+    script(src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="")
+    script(src="/map.js")
