redirect to add-image
added dropzone package

update files jerarchie

--- a/views/layout/authenticated.pug
+++ b/views/layout/authenticated.pug
@@ -9,6 +9,8 @@ html(lang="es")
         block styles
     body.min-h-screen.bg-gray-50
 
+        include includes/header 
+
         main.mx-auto.container.mt-10.px-2
             block contain
 
