--- a/views/properties/create.pug
+++ b/views/properties/create.pug
@@ -1,4 +1,4 @@
-extends ../layout/index
+extends ../layout/authenticated
 
 block styles 
     link(rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="")
